components/go-czjozyjd/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: go-czjozyjd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: go-czjozyjd 
  name: go-czjozyjd
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: go-czjozyjd
