components/go-czjozyjd/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: go-czjozyjd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: go-czjozyjd 
  name: go-czjozyjd
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: go-czjozyjd
    weight: 100
